[project]
name = "tugs"
version = "0.0.3"
# extend with author licensing etc.


dependencies = [
    "tensorly",
    "nerfstudio>=1.1.4",
    "gsplat>=1.3.0",
]


[tool.setuptools.packages.find]
include = ["model_zoo*"]


[project.entry-points.'nerfstudio.method_configs']

tugs_cp = "model_zoo.model_zoo_config:tugs_cp_method"